tiny spec change

--- a/HeLX/ide/index.html
+++ b/HeLX/ide/index.html
@@ -50,7 +50,7 @@
 	editor.setOption("showPrintMargin", false);
 	editor.session.setMode("ace/mode/javascript");
 		
-	editor.setValue("HeLX Spec A 'https://hexl.hailiax.io/specs/0'\n\n",1);
+	editor.setValue("HeLX Spec A 'Main'\n\n",1);
 
 } </script>
 <style>
