--- a/HeLX/ide/index.html
+++ b/HeLX/ide/index.html
@@ -156,11 +156,16 @@
 } </script>
 <style>
 
+	html,body{
+		font-size: 15px !important;
+	}
 	#editor{
 		position: fixed;
 		top: 0; left: 0;
 		height: 100%;
 		width: 50%;
+		font-family: Menlo, consolas, monospace !important;
+		font-size: .85rem;
 	}
 	#tall #editor{
 		height: 50%;
