--- a/HeLX/ide/compiler.html
+++ b/HeLX/ide/compiler.html
@@ -11,7 +11,9 @@ var index = 0;
 var Module = {
 	print: function(text) {
 		output += text + '\n';
-		ide.postMessage(output,'*');
+		if (text === ""){
+			ide.postMessage(output,'*');
+		}
 	},
 	printErr: function(text) { console.error(text) },
 	noInitialRun: true,
