--- a/HeLX/ide/compiler.html
+++ b/HeLX/ide/compiler.html
@@ -11,7 +11,7 @@ var index = 0;
 var Module = {
 	print: function(text) {
 		output += text + '\n';
-		if (text === ""){
+		if (text === "@HLXCNTRLEND@"){
 			ide.postMessage(output,'*');
 		}
 	},
