--- a/HeLX/ide/index.html
+++ b/HeLX/ide/index.html
@@ -5,6 +5,15 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 <title>HeLX wIDE</title>
+	
+<link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+<link rel="manifest" href="/favicons/manifest.json">
+<link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#3880ee">
+<link rel="shortcut icon" href="/favicons/favicon.ico">
+<meta name="msapplication-config" content="/favicons/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
 
 <script src="includes/polyfill.min.js"></script>
 <link href="includes/ace.css" rel="stylesheet">
@@ -33,6 +42,7 @@
 	}
 
 	Compile = function(){
+		try {document.body.removeChild(compiler);} catch(e){}
 		if (document.body.id !== "tall"){ editor.focus(); }
 		compiler = document.createElement('iframe');
 		compiler.src = 'compiler.html';
